...
        onSecondary = { router.push(Secondary)},
        onTertiary = { router.push(Tertiary) },
        onBack = onBack
      )

      Primary -> NestedView(
        title = "Primary",
        items = items,
        contentColor = onPrimary,
        containerColor = primaryContainer,
        onBack = { router.pop() },
        onSelect = onSelect
      )

      Secondary -> NestedView(
        title = "Secondary",
        items = items,
        contentColor = onSecondary,
        containerColor = secondaryContainer,
        onBack = { router.pop() },
        onSelect = onSelect
      )
...
